# job-matching-assistant

./: Dockerfile  README.md  api_dev.py  docker-compose.yml  pyproject.toml
data/: ground-truth-data.csv
evaluation/: generate_ground_truth_data.py  rag_evaluation.py  retrieval_evaluation.py
ingestion/: ingestion.py
rag/: main.py  rag.py
